arch/x86/oprofile/op_model_amd.c
@@ -700,7 +700,13 @@ static int setup_ibs_files(struct super_block *sb, struct dentry *root)
 
 static int op_amd_init(struct oprofile_operations *ops)
 {
+	/*
+	 * init_ibs() preforms implictly cpu-local operations, so pin this
+	 * thread to its current CPU
+	 */
+	preempt_disable();
 	init_ibs();
+	preempt_enable();
 	create_arch_files = ops->create_files;
 	ops->create_files = setup_ibs_files;
 	return 0;
